# DAHAD

./: .gitignore  README.md  pyproject.toml  setup.py
DAHAD/: DataStarred.py  SpectrumFITS.py  __init__.py  querys.py
examples/: dowload_desi.py  new_querys.ipynb  ploting.ipynb  querys.ipynb  spectra_dow.ipynb
